...
          headerShown: false,
        }}>
        <Tabs.Screen
          name="HomeStack"
          component={HomeStack}
          options={{
            tabBarTestID: 'tabs.homePage',
            tabBarLabel: translate('homePage.title'),
            tabBarIcon: ({color, size}) => (
              <Icon
                style={{marginTop: 5}}
                color={color}
                name="home"
...
          }}
        />
        <Tabs.Screen
          name="MoreStack"
          component={MoreStack}
          options={{
            tabBarTestID: 'tabs.morePage',
            tabBarLabel: translate('morePage.title'),
            tabBarIcon: ({color, size}) => (
              <Icon
                style={{marginTop: 5}}
                color={color}
                name="more-horiz"
...
