...
          "title": "Short",
          "description": "Starts on Nisan 9 and ends on Nisan 16 and includes less verses to read each day. Based on the schedule found in the Examining the Scriptures Daily booklet"
        }
      }
    }
  },
  "today": "Today",
  "thisWeek": "This Week",
  "thisMonth": "This Month",
  "other": "Other",
  "versePicker": {"chapterAbrev": "ch", "verseAbrev": "v"},
  "warning": "Warning",
  "weekdays": {
    "0": {"abrev": "Dg", "name": "Sunday"},
    "1": {"abrev": "Dl", "name": "Monday"},
    "2": {"abrev": "Dt", "name": "Tuesday"},
    "3": {"abrev": "Dc", "name": "Wednesday"},
    "4": {"abrev": "Dj", "name": "Thursday"},
    "5": {"abrev": "Dv", "name": "Friday"},
    "6": {"abrev": "Ds", "name": "Saturday"}
...
