{
  "actions": {
    "cancel": "取消",
    "done": "完成"
  },
  "bibleBook": "书卷",
  "bibleBooks": {
    "1": {
      "name": "创世记",
      "whereWritten": "旷野"
    },
    "2": {
      "name": "出埃及记",
      "whereWritten": "旷野"
    },
    "3": {
      "name": "利未记",
      "whereWritten": "旷野"
    },
    "4": {
      "name": "民数记",
      "whereWritten": "旷野和摩押平原"
    },
    "5": {
      "name": "申命记",
      "whereWritten": "摩押平原"
    },
    "6": {
      "name": "约书亚记",
      "whereWritten": "迦南"
    },
    "7": {
      "name": "士师记",
      "whereWritten": "以色列"
    },
    "8": {
      "name": "路得记",
      "whereWritten": "以色列"
    },
    "9": {
      "name": "撒母耳记上",
      "whereWritten": "以色列"
    },
    "10": {
      "name": "撒母耳记下",
      "whereWritten": "以色列"
    },
    "11": {
      "name": "列王纪上",
      "whereWritten": "犹大地区"
    },
    "12": {
      "name": "列王纪下",
      "whereWritten": "犹大地区和埃及"
    },
    "13": {
      "name": "历代志上",
      "whereWritten": "耶路撒冷（?"
    },
    "14": {
      "name": "历代志下",
      "whereWritten": "耶路撒冷（?"
    },
    "15": {
      "name": "以斯拉记",
      "whereWritten": "耶路撒冷"
    },
    "16": {
      "name": "尼希米记",
      "whereWritten": "耶路撒冷"
    },
    "17": {
      "name": "以斯帖记",
      "whereWritten": "埃兰的书珊"
    },
    "18": {
      "name": "约伯记",
      "whereWritten": "旷野"
    },
    "19": {
      "name": "诗篇",
      "whereWritten": ""
    },
    "20": {
      "name": "箴言",
      "whereWritten": "耶路撒冷"
    },
    "21": {
      "name": "传道书",
      "whereWritten": "耶路撒冷"
    },
    "22": {
      "name": "雅歌",
      "whereWritten": "耶路撒冷"
    },
    "23": {
      "name": "以赛亚书",
      "whereWritten": "耶路撒冷"
    },
    "24": {
      "name": "耶利米书",
      "whereWritten": "犹大地区、埃及"
    },
    "25": {
      "name": "耶利米哀歌",
      "whereWritten": "耶路撒冷附近"
    },
    "26": {
      "name": "以西结书",
      "whereWritten": "巴比伦"
    },
    "27": {
      "name": "但以理书",
      "whereWritten": "巴比伦"
    },
    "28": {
      "name": "何西阿书",
      "whereWritten": "撒马利亚地区"
    },
    "29": {
      "name": "约珥书",
      "whereWritten": "犹大地区"
    },
    "30": {
      "name": "阿摩司书",
      "whereWritten": "犹大地区"
    },
    "31": {
      "name": "俄巴底亚书",
      "whereWritten": ""
    },
    "32": {
      "name": "约拿书",
      "whereWritten": ""
    },
    "33": {
      "name": "弥迦书",
      "whereWritten": "犹大地区"
    },
    "34": {
      "name": "那鸿书",
      "whereWritten": "犹大地区"
    },
    "35": {
      "name": "哈巴谷书",
      "whereWritten": "犹大地区"
    },
    "36": {
      "name": "西番雅书",
      "whereWritten": "犹大地区"
    },
    "37": {
      "name": "哈该书",
      "whereWritten": "重建的耶路撒冷"
    },
    "38": {
      "name": "撒迦利亚书",
      "whereWritten": "重建的耶路撒冷"
    },
    "39": {
      "name": "玛拉基书",
      "whereWritten": "重建的耶路撒冷"
    },
    "40": {
      "name": "马太福音",
      "whereWritten": "以色列"
    },
    "41": {
      "name": "马可福音",
      "whereWritten": "罗马"
    },
    "42": {
      "name": "路加福音",
      "whereWritten": "凯撒里亚"
    },
    "43": {
      "name": "约翰福音",
      "whereWritten": "以弗所或附近地区"
    },
    "44": {
      "name": "使徒行传",
      "whereWritten": "罗马"
    },
    "45": {
      "name": "罗马书",
      "whereWritten": "哥林多"
    },
    "46": {
      "name": "哥林多前书",
      "whereWritten": "以弗所"
    },
    "47": {
      "name": "哥林多后书",
      "whereWritten": "马其顿"
    },
    "48": {
      "name": "加拉太书",
      "whereWritten": "哥林多或叙利亚的安提阿"
    },
    "49": {
      "name": "以弗所书",
      "whereWritten": "罗马"
    },
    "50": {
      "name": "腓立比书",
      "whereWritten": "罗马"
    },
    "51": {
      "name": "歌罗西书",
      "whereWritten": "罗马"
    },
    "52": {
      "name": "帖撒罗尼迦前书",
      "whereWritten": "哥林多"
    },
    "53": {
      "name": "帖撒罗尼迦后书",
      "whereWritten": "哥林多"
    },
    "54": {
      "name": "提摩太前书",
      "whereWritten": "马其顿"
    },
    "55": {
      "name": "提摩太后书",
      "whereWritten": "罗马"
    },
    "56": {
      "name": "提多书",
      "whereWritten": "马其顿（?）"
    },
    "57": {
      "name": "腓利门书",
      "whereWritten": "罗马"
    },
    "58": {
      "name": "希伯来书",
      "whereWritten": "罗马"
    },
    "59": {
      "name": "雅各书",
      "whereWritten": "耶路撒冷 "
    },
    "60": {
      "name": "彼得前书",
      "whereWritten": "巴比伦"
    },
    "61": {
      "name": "彼得后书",
      "whereWritten": "巴比伦（?）"
    },
    "62": {
      "name": "约翰一书",
      "whereWritten": "以弗所或附近地区"
    },
    "63": {
      "name": "约翰二书",
      "whereWritten": "以弗所或附近地区"
    },
    "64": {
      "name": "约翰三书",
      "whereWritten": "以弗所或附近地区"
    },
    "65": {
      "name": "犹大书",
      "whereWritten": "以色列（?）"
    },
    "66": {
      "name": "启示录",
      "whereWritten": "拔摩岛"
    }
  },
  "buttonsPopup": {"title": "阅读部分"},
  "createSchedulePopup": {
    "createSchedule": "创建度进表",
    "numberOfPortions": "多少{{portionDesc}}",
    "numberOfPortionsPhld": "出版物一共包括多少{{portionDesc}}",
    "readingPortionDesc": {
      "title": "描述朗读部分",
      "article": "文章",
      "chapter": "章",
      "page": "页",
      "paragraph": "段"
    },
    "readingPortionDescPhld": "描述每一朗读部分：例如页，章，等等",
    "portionsPerDay": "每天读多少{{portionDesc}}",
    "portionsPerDayPhld": "你每天想读多少{{portionDesc}}",
    "scheduleName": "度进表题目",
    "scheduleDuration": "度进表时常",
    "scheduleDurPhld": "几年了？",
    "shouldTrack": "跟踪阅读顺序",
    "startingPortion": "开始{{portionDesc}}",
    "startingPortionPhld": "你想从哪一{{portionDesc}}开始",
    "startingVerse": "开始经文",
    "unfinished": "请正确得填写所有必填字段以安排时间表"
  },
  "date": {
    "approxDesc": {
      "approxDate": "{{about}}{{date}}{{after}}{{before}}",
      "about": "约",
      "after": "后",
      "before": "前"
    },
    "ancientDate": "{{bceOrCe}}{{year}}年",
    "bce": "公元前",
    "ce": "公元",
    "dateSpan": "{{startDate}}-{{endDate}}",
    "specialCases": {
      "1": "从“最初”到{{endYear}}",
      "5": "{{endYear}}的一个月",
      "8": "士师统治（{{startYear}}到{{endYear}}）期间的11年",
      "13": "历代志上9:44后：约{{startYear}}-{{endYear}}",
      "18": "{{startYear}}和{{endYear}}之间逾140年",
      "37": "{{endYear}}的112天",
      "43": "序言后：{{startYear}}-{{endYear}}"
    }
  },
  "examiningTheScripturesDaily": "天天考查圣经",
  "frequencies": {
    "daily": "每天",
    "weekly": "每周",
    "monthly": "每个月",
    "never": "没有"
  },
  "home": "首页",
  "homePage": {
    "emptyList": "今天的阅读部分都完成了"
  },
  "links": {
    "languageTag": "cmn-hans",
    "www": {
      "bible": "圣经",
      "books": "圣经卷目",
      "how-to-read-the-bible": "怎样阅读圣经",
      "introduction": "圣经入门",
      "library": "多媒体图书馆",
      "study-bible": "nwt"
    },
    "wol": {"lp-e": "lp-chs", "r1": "r23", "nwtsty": "nwt"}
  },
  "missingTranslation": "还没翻译好",
  "morePage": {
    "title": "更多"
  },
  "notification": {
    "baseTitle": "今天的阅读",
    "bigText": "咱们看一看今天有什么要做的",
    "message": "加油"
  },
  "notificationPage": {
    "deleteNotificationMessage": "请确认你想删除“{{notificationName}}”提醒?"
  },
  "notificationsPage": {
    "title": "提醒",
    "notificationName": "提醒题目",
    "notificationPopupTitle": "造成新的提醒"
  },
  "openJWLibrary": "打开 JW Library APP",
  "other": "其他",
  "ordinal": {
    "0": "第",
    "1": "第",
    "2": "第",
    "3": "第",
    "4": "第",
    "5": "第",
    "6": "第",
    "7": "第",
    "8": "第",
    "9": "第",
    "after": "false",
    "special": {}
  },
  "prompts": {
    "setNotification": "定提醒的时间：",
    "nameTaken": "这个进度表题目已经运用了请选择还没用的题目"
  },
  "readingRemindersPopup": {
    "readingReminders": "阅读前提醒",
    "heading0": "创造良好的环境",
    "body0-1": "找个安静的地方，也要排除干扰。",
    "body0-2": "（也许把手机跳到静音模式）",
    "heading1": "读圣经前要祷告",
    "body1-1": "求耶和华帮你怀着正确的态度还有赐下给你他的神圣力量才能帮你理解并运用你所学到的事",
    "heading2": "仔细沉思你所读到的内容",
    "body2-1": "不要读得太快，边读边思考。",
    "subheading2-1": "你可以问问自己：",

    "body2-2": "关于耶和华上帝，经文让我看出什么？",
    "body2-3": "经文跟圣经的主线有什么关系？",
    "body2-4": "我可以怎样把从经文里学到的应用在生活上？",
    "body2-5": "我可以怎样用经文来帮助别人？",

    "subheading2-2": "想象自己置身其中:",
    "body2-6": "你能看到什么？听到什么？闻到什么？",
    "body2-7": "如果你是其中的人物，会有什么感觉？",
    "subheading2-3": "查找相关资料为了.....",
    "body2-8": "正确的明白这部分的背景。",
    "body2-9": "完整的还有清楚的理解很难理解的事。",
    "heading3": "运用你所学到的资料",
    "body3-1": "我们看出自己所做的事有实用价值，得益就会更大。研读圣经也一样。",
    "body3-2": "我们为了在自己身上还有为别人要采取行动运用我们所学到的事。",
    "subheading3-1": "提醒来自下边的资料：",
    "body3-3": "请查看上面的资料为了多深入了解相关的意思"
  },
  "readingInfoPopup": {
    "readingInfo": "阅读部分资料",
    "readingPortion": "阅读部分",
    "timeCovered": "覆盖时期",
    "whereWritten": "写作地点",
    "whenWritten": "成书时间",
    "writers": "执笔者"
  },
  "readingSchedules": "阅读进度表",
  "reminders": {
    "dailyReading": "今天的阅读经文",
    "dailyText": "每日经文",
    "midweekMeetingStudy": "周中聚会研究",
    "reminder": "提醒",
    "weekendMeetingStudy": "周末聚会研究",
    "weeklyReading": {
      "title": "这周的朗读经文",
      "showDaily": "露出这周朗读经文当天部分"
    }
  },
  "remindersPage": {
    "completed": "{{desc}}完成",
    "every": "每一个：",
    "name": "题目：",
    "reminderPopupTitle": "造成新的提醒",
    "repeats": "重复",
    "title": "提醒"
  },
  "schedules": "进度表",
  "schedulePage": {
    "deleteScheduleMessage": "请确认你想删除叫 “{{scheduleName}}” 的进度表?",
    "hideCompleted": "隐藏完成的"
  },
  "scheduleTransactions": {
    "adjustedVersePrompt": "开头经文因为你请求的经文超过界限了从你请求的经文 “{{initialBibleBook}} {{initialChapter}}:{{initialVerse}}” 被改到最进的经文 “{{startBibleBook}} {{startChapter}}:{{startVerse}}”"
  },
  "scheduleTypePopup": {
    "scheduleType": "进度表类型",
    "sequential": "顺次",
    "sequentialDescription": "读整本圣经从创世纪开始到启示录",
    "chronological": "顺叙",
    "chronologicalDescription": "按照事件发生的顺序阅读圣经。  （实验：如果您发现不一致之处，请与我联系）",
    "thematic": "专题性",
    "thematicDescription": "每天，每周一次从圣经的不同部分中进行阅读：第1天 —— 法律，2 —— 历史，3 —— 诗篇，4 —— 诗歌，5 —— 预言，6 —— 福音，7 —— 字母",
    "custom": "自定义",
    "customDescription": "创建一本出版物的自定义进度表"
  },
  "settingsPage": {
    "weeklyReadingResetDay": "要在哪一天重新本周的阅读经文",
    "meetingDays": "聚会日子",
    "title": "设定"
  },
  "thisMonth": "这个月",
  "thisWeek": "这周",
  "today": "今天",
  "versePicker": {
    "chapterAbrev": "章",
    "verseAbrev": "节"
  },
  "warning": "请注意",
  "weekdays": {
    "0": {"abrev": "天", "name": "周天"},
    "1": {"abrev": "一", "name": "周一"},
    "2": {"abrev": "二", "name": "周二"},
    "3": {"abrev": "三", "name": "周三"},
    "4": {"abrev": "四", "name": "周四"},
    "5": {"abrev": "五", "name": "周五"},
    "6": {"abrev": "六", "name": "周六"}
  }
}
